--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,7 @@
 PORT_BD=5432
+HOST="localhost"
 PASSWORD_BD=admin123
+USERNAME=postgres
+DATABASE="backend_esteven"
+
 SECRET_JWT="MI_CODIGO_SECRETO"
