--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,5 @@
-const envFilePath= __dirname +"/../../.env.development"
-        const existsPath = fs.existsSync(envFilePath)
-        if(!existsPath){
-            console.log(".env.development no existe PRODUCTION")
-        }
-        this.envConfig=parse(fs.readFileSync(envFilePath))
+PORT=5432
+HOST=""
+PASSWORD=""
+USERNAME=""
+DATABASE=""
