--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "typeorm": "typeorm-ts-node-commonjs",
     "migration:generate": "npx cross-env NODE_ENV=development npm run typeorm migration:generate ./src/database/migrations/%npm_config_name% -- -d typeorm.config.ts",
     "migration:run":"npx cross-env NODE_ENV=development npm run typeorm migration:run -- -d typeorm.config.ts",
-    "migration:revert":"npx cross-env NODE_ENV=development npm run typeorm migration:revert -- -d typeorm.config.ts"
+    "migration:revert":"npm run typeorm migration:revert -- -d typeorm.config.ts"
+  
+ 
+ 
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
