--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,6 @@ PORT_BD=5432
 HOST="localhost"
 PASSWORD=12345
 USERNAME=postgres
-DATABASE="backend_esteven"
+DATABASE="back_nest_angular_1"
 
 SECRET_JWT="MI_CODIGO_SECRETO"
